// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FaceLabelingMessages /> should render properly when there is no previous or current job 1`] = `null`;

exports[`<FaceLabelingMessages /> should render properly when there there is a training job 1`] = `
.emotion-3 {
  padding-bottom: 16px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #cfe5ff;
  border-radius: 2px;
  padding: 12px;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #191919;
  font-weight: 500;
}

.emotion-0 {
  color: #4a90e2;
}

<div
  className="emotion-3"
>
  <div
    className="emotion-2"
  >
    <svg
      color="#4a90e2"
      data-file-name="generating.svg"
      width={20}
    />
    <div
      className="emotion-1"
      role="alert"
    >
      Face training in progress.
       
      <a
        className="emotion-0"
        href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/1a1d45af-7477-1396-ae57-a618e8efb91f"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Check Status
      </a>
    </div>
  </div>
</div>
`;

exports[`<FaceLabelingMessages /> should render properly when there was a previous training job but no current job 1`] = `
.emotion-2 {
  padding-bottom: 16px;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #191919;
  font-weight: 500;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #d7f2de;
  border-radius: 2px;
  padding: 12px;
}

<div
  className="emotion-2"
>
  <div
    className="emotion-1"
  >
    <svg
      color="#4ac565"
      data-file-name="checkmark.svg"
      width={20}
    />
    <div
      className="emotion-0"
      role="alert"
    >
      Face training complete.
    </div>
  </div>
</div>
`;
